tests/compile/userdata_getter_and_meta.stderr
error: `meta` can only be combined with `field`
 --> tests/compile/userdata_getter_and_meta.rs:6:5
  |
6 |     #[lua(getter, meta)]
  |     ^^^^^^^^^^^^^^^^^^^^
